# DriverAssistanceSystem

./: README.md
FatigueDrivingDetection/: CMakeLists.txt  README.md  build.sh
FatigueDrivingDetection/config/: README.md
FatigueDrivingDetection/include/: BuzzerControl.h  Compute.h  fatigueDetection.h  getTime.h  main.h  render_face.h
FatigueDrivingDetection/log/: cmake_log  make_log
FatigueDrivingDetection/src/: main.cpp
lane_car_detect/: CMakeLists.txt
lane_car_detect/include/: lane_detect.h  yolo_car_detect.h
lane_car_detect/src/: main.cpp
